deleted package gobi

--- a/GoBi/nbproject/project.properties
+++ b/GoBi/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=gobi.GoBi
+main.class=blatt1.GoBi
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
