--- a/GoBi/nbproject/private/private.properties
+++ b/GoBi/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+application.args=-pairs test.pairs -seqlib test.seqlib -printali -mode global
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=/home/tobias/.netbeans/7.4/build.properties
