--- a/GoBi/nbproject/private/private.properties
+++ b/GoBi/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=-pairs cathscop.inpairs -seqlib domains.seqlib -printali -mode global
+application.args=-pairs cathscop.inpairs -seqlib domains.seqlib -mode global
 compile.on.save=true
 do.depend=false
 do.jar=true
