--- a/GoBi/nbproject/private/private.properties
+++ b/GoBi/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/h/harrert/.netbeans/7.4/build.properties
+user.properties.file=/home/tobias/.netbeans/7.4/build.properties
