--- a/GoBi/nbproject/private/private.properties
+++ b/GoBi/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-application.args=-pairs sanity.pairs -seqlib domains.seqlib -mode global
+application.args=-pairs cathscop.inpairs -seqlib domains.seqlib -mode global
 compile.on.save=true
 do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/tobias/.netbeans/7.4/build.properties
+user.properties.file=/home/h/harrert/.netbeans/7.4/build.properties
