--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /2/Blatt2/dist/
 /Blatt3/nbproject/private/
 /Blatt3/dist/
+/Strukt_A4_3/nbproject/private/
+/Strukt_4_A3/nbproject/private/
+/Strukt_4_A3/build/
+/B4_A3/nbproject/private/
+/B4_A3/build/
+/Blatt4/nbproject/private/
