--- a/Blatt4/nbproject/private/private.properties
+++ b/Blatt4/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/h/harrert/.netbeans/7.4/build.properties
+user.properties.file=/home/tobias/.netbeans/7.4/build.properties
