--- a/Blatt4/nbproject/project.properties
+++ b/Blatt4/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/Blatt4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.colt.jar=/home/tobias/Downloads/colt.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Colt.classpath}
+    ${libs.Colt.classpath}:\
+    ${file.reference.colt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
