--- a/Blatt4/nbproject/private/private.properties
+++ b/Blatt4/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.colt.jar=/home/h/harrert/Dokumente/GoBi/Blatt4/colt.jar
+file.reference.colt.jar=/home/tobias/Documents/GoBi/Blatt4/colt.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/h/harrert/.netbeans/7.4/build.properties
+user.properties.file=/home/tobias/.netbeans/7.4/build.properties
