--- a/Blatt4/nbproject/project.properties
+++ b/Blatt4/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=blatt4.Blatt4
+main.class=blatt4.TenLongSegments
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
