--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /B4_A3/build/
 /Blatt4/nbproject/private/private.properties
 /Blatt4/nbproject/private/private.xml
+/Blatt6/build/
+/Blatt6/nbproject/private/
